[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Font1.tres" type="DynamicFont" id=1]
[ext_resource path="res://GUI/gui box 1.png" type="Texture" id=2]
[ext_resource path="res://GUI/ItemMenu.gd" type="Script" id=3]

[node name="ItemMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reference" type="NinePatchRect" parent="."]
visible = false
margin_left = 36.0
margin_top = 10.0
margin_right = 284.0
margin_bottom = 31.0
texture = ExtResource( 2 )
region_rect = Rect2( 26.8144, 27.0555, 27.481, 27.2217 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsDisplay" type="NinePatchRect" parent="."]
margin_left = 36.0
margin_top = 30.0
margin_right = 284.0
margin_bottom = 114.0
texture = ExtResource( 2 )
region_rect = Rect2( 26.8144, 27.0555, 27.481, 27.2217 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ItemsDisplay"]
margin_left = 29.0
margin_top = 8.0
margin_right = 235.0
margin_bottom = 79.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ItemsDisplay/GridContainer"]
margin_right = 101.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="Label2" type="Label" parent="ItemsDisplay/GridContainer"]
margin_left = 105.0
margin_right = 206.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="Label3" type="Label" parent="ItemsDisplay/GridContainer"]
margin_top = 17.0
margin_right = 101.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="Label4" type="Label" parent="ItemsDisplay/GridContainer"]
margin_left = 105.0
margin_top = 17.0
margin_right = 206.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="Label5" type="Label" parent="ItemsDisplay/GridContainer"]
margin_top = 34.0
margin_right = 101.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="Label6" type="Label" parent="ItemsDisplay/GridContainer"]
margin_left = 105.0
margin_top = 34.0
margin_right = 206.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="Label7" type="Label" parent="ItemsDisplay/GridContainer"]
margin_top = 51.0
margin_right = 101.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="Label8" type="Label" parent="ItemsDisplay/GridContainer"]
margin_left = 105.0
margin_top = 51.0
margin_right = 206.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Item Lorem Ip"

[node name="ItemDescription" type="NinePatchRect" parent="."]
margin_left = 36.0
margin_top = 113.0
margin_right = 284.0
margin_bottom = 149.0
texture = ExtResource( 2 )
region_rect = Rect2( 26.8144, 27.0555, 27.481, 27.2217 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}
